[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/health_ui/health_ui.gd" type="Script" id=1]
[ext_resource path="res://UI/health_ui/armor_health_ui.png" type="Texture" id=2]
[ext_resource path="res://UI/health_ui/empty_armor_health_ui.png" type="Texture" id=3]
[ext_resource path="res://UI/health_ui/gold_health_ui.png" type="Texture" id=4]
[ext_resource path="res://UI/health_ui/empty_health_ui.png" type="Texture" id=5]
[ext_resource path="res://UI/health_ui/healthUI.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "blue"
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.0823529, 0.254902, 0.929412, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "flash"
length = 0.1
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1.5, 1.5, 1.5, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="health_ui" type="Control"]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 319.0
margin_bottom = 32.0
size_flags_vertical = 8
script = ExtResource( 1 )

[node name="max_health" type="TextureRect" parent="."]
use_parent_material = true
margin_right = 10.0
margin_bottom = 18.0
rect_min_size = Vector2( 10, 8 )
size_flags_vertical = 8
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="TextureRect" parent="."]
use_parent_material = true
margin_right = 10.0
margin_bottom = 18.0
size_flags_vertical = 8
texture = ExtResource( 6 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bonus_health" type="TextureRect" parent="."]
use_parent_material = true
margin_top = 5.0
margin_right = 10.0
margin_bottom = 22.0
size_flags_vertical = 8
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="max_armor" type="TextureRect" parent="."]
use_parent_material = true
margin_top = 20.0
margin_right = 10.0
margin_bottom = 38.0
size_flags_vertical = 8
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="armor" type="TextureRect" parent="."]
use_parent_material = true
margin_top = 19.0
margin_right = 10.0
margin_bottom = 37.0
size_flags_vertical = 8
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blue = SubResource( 1 )
anims/flash = SubResource( 2 )
